--- a/.insomnia/UnitTest/ut_a8ad0d94819d4a28bdcb3937260833b8.yml
+++ b/.insomnia/UnitTest/ut_a8ad0d94819d4a28bdcb3937260833b8.yml
@@ -1,7 +1,7 @@
 _id: ut_a8ad0d94819d4a28bdcb3937260833b8
 type: UnitTest
 parentId: uts_96eb9e41cb11461db12d11eb54854cd0
-modified: 1696228054180
+modified: 1696230905619
 created: 1696223200359
 requestId: req_87b24501a11c4f88bf043cbf396a6538
 name: Store - Parameter Check
@@ -18,4 +18,4 @@ code: |-
   //expect(body).to.have.property('unavailable');
   //expect(body).to.have.property('pending');
   expect(body).to.have.property('available');
-  //expect(body).to.have.property('hello');
+  expect(body).to.have.property('hello');
