--- a/.insomnia/UnitTest/ut_3e65d17a051942ea8a0b1f0a59476548.yml
+++ b/.insomnia/UnitTest/ut_3e65d17a051942ea8a0b1f0a59476548.yml
@@ -1,7 +1,7 @@
 _id: ut_3e65d17a051942ea8a0b1f0a59476548
 type: UnitTest
 parentId: uts_96eb9e41cb11461db12d11eb54854cd0
-modified: 1696230478532
+modified: 1696244651179
 created: 1696224846176
 requestId: req_4b925cfcb99646dfbf1e43fd1e4fff77
 name: User - Parameter Check
@@ -9,7 +9,7 @@ code: |-
   const response = await insomnia.send();
   const body = JSON.parse(response.data);
   const item = body[0];
-  const username = body[0];
+  //const username = body[0];
 
   expect(body).to.not.be.an('array');
   expect(body).to.be.an('object');
